--- a/WPFSharp.Globalizer.Examples/WPF.Globalizer.Example/Globalization/en-US/en-US.xaml
+++ b/WPFSharp.Globalizer.Examples/WPF.Globalizer.Example/Globalization/en-US/en-US.xaml
@@ -1,14 +1,11 @@
-﻿<Globalization:EnhancedResourceDictionary 
+﻿<Globalization:GlobalizationResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
-    xmlns:Globalization="clr-namespace:WPFSharp.Globalizer.Base;assembly=WPFSharp.Globalizer.Base"
+    xmlns:Globalization="clr-namespace:WPFSharp.Globalizer;assembly=WPFSharp.Globalizer"
     Name="en-US"
-    Type="Globalization"
+    LinkedStyle="en-US-style"
     >
-
-    <FlowDirection x:Key="FlowDirection_Default">LeftToRight</FlowDirection>
-    <FlowDirection x:Key="FlowDirection_Reverse">RightToLeft</FlowDirection>
 
     <!-- Main Window -->
     <sys:String x:Key="MainWindow_Title">WPF Globalization Example (English)</sys:String>
@@ -22,9 +19,10 @@
     <sys:String x:Key="Menu_Language_Hebrew">_Hebrew</sys:String>
 
     <!-- Form strings -->
+    <!-- The following line is commented out on purpose in this example in order to demonstrate the FallbackValue -->
     <!--<sys:String x:Key="Form_FirstName">First Name</sys:String>-->
     <sys:String x:Key="Form_LastName">Last Name</sys:String>
     <sys:String x:Key="Form_Age">Age</sys:String>
     <sys:String x:Key="Form_Button_Clear">Clear</sys:String>
 
-</Globalization:EnhancedResourceDictionary>
+</Globalization:GlobalizationResourceDictionary>
