--- a/WPFSharp.Globalizer.Examples/WPF.Globalizer.Example/Globalization/es-ES/es-ES.xaml
+++ b/WPFSharp.Globalizer.Examples/WPF.Globalizer.Example/Globalization/es-ES/es-ES.xaml
@@ -1,14 +1,11 @@
-﻿<Globalization:EnhancedResourceDictionary 
+﻿<Globalization:GlobalizationResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
-    xmlns:Globalization="clr-namespace:WPFSharp.Globalizer.Base;assembly=WPFSharp.Globalizer.Base"
+    xmlns:Globalization="clr-namespace:WPFSharp.Globalizer;assembly=WPFSharp.Globalizer"
     Name="es-ES"
-    Type="Globalization"
+    LinkedStyle="es-ES-style"
     >
-
-    <FlowDirection x:Key="FlowDirection_Default">LeftToRight</FlowDirection>
-    <FlowDirection x:Key="FlowDirection_Reverse">RightToLeft</FlowDirection>
 
     <!-- Main Window -->
     <sys:String x:Key="MainWindow_Title">WPF Globalization Example (Spanish)</sys:String>
@@ -27,4 +24,4 @@
     <sys:String x:Key="Form_Age">Edad</sys:String>
     <sys:String x:Key="Form_Button_Clear">borrar</sys:String>
 
-</Globalization:EnhancedResourceDictionary>
+</Globalization:GlobalizationResourceDictionary>
