--- a/WPFSharp.Globalizer.Examples/WPF.Globalizer.Example/Globalization/he-IL/he-IL.xaml
+++ b/WPFSharp.Globalizer.Examples/WPF.Globalizer.Example/Globalization/he-IL/he-IL.xaml
@@ -1,14 +1,11 @@
-﻿<Globalization:EnhancedResourceDictionary 
+﻿<Globalization:GlobalizationResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
-    xmlns:Globalization="clr-namespace:WPFSharp.Globalizer.Base;assembly=WPFSharp.Globalizer.Base"
+    xmlns:Globalization="clr-namespace:WPFSharp.Globalizer;assembly=WPFSharp.Globalizer"
     Name="he-IL"
-    Type="Globalization"
+    LinkedStyle="he-IL-style"
     >
-
-    <FlowDirection x:Key="FlowDirection_Default">RightToLeft</FlowDirection>
-    <FlowDirection x:Key="FlowDirection_Reverse">LeftToRight</FlowDirection>
 
     <!-- Main Window -->
     <sys:String x:Key="MainWindow_Title">WPF Globalization Example (Hebrew)</sys:String>
@@ -26,4 +23,4 @@
     <sys:String x:Key="Form_LastName">שם משפחה</sys:String>
     <sys:String x:Key="Form_Age">גיל</sys:String>
     <sys:String x:Key="Form_Button_Clear">ברור</sys:String>
-</Globalization:EnhancedResourceDictionary>
+</Globalization:GlobalizationResourceDictionary>
