--- a/WPFSharp.Globalizer/WPFSharp.Globalizer/Controls/LanguageSelectionDropDownMenu.xaml
+++ b/WPFSharp.Globalizer/WPFSharp.Globalizer/Controls/LanguageSelectionDropDownMenu.xaml
@@ -1,4 +1,25 @@
-﻿<!-- 
+﻿<!-- See license at bottom of file -->
+<DockPanel x:Class="WPFSharp.Globalizer.Controls.LanguageSelectionDropDownMenu"
+           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+           xmlns:Globalizer="clr-namespace:WPFSharp.Globalizer"
+           xmlns:Converters="clr-namespace:WPFSharp.Globalizer.Converters"
+           FlowDirection="{DynamicResource ResourceKey=FlowDirection_Default}"
+           >
+    <DockPanel.Resources>
+        <Converters:LanguageNameConverter x:Key="LanguageConverter" />
+    </DockPanel.Resources>
+    <Label x:Name="Label" Content="{Globalizer:GlobalizedResource ResourceKey=LanguageSelectionLabel, FallbackValue='Language: '}" />
+    <ComboBox x:Name="LanguageSelectionComboBox" SelectionChanged="LanguageSelectionChanged" ItemsSource="{x:Static Globalizer:AvailableLanguages.Instance}" >
+        <ComboBox.ItemTemplate>
+            <DataTemplate>
+                <TextBlock Text="{Binding Converter={StaticResource LanguageConverter}}" />
+            </DataTemplate>
+        </ComboBox.ItemTemplate>
+    </ComboBox>
+</DockPanel>
+
+<!-- 
 WPF Sharp Globalizer - A project deisgned to make localization and styling
                        easier by decoupling both process from the build.
 
@@ -32,23 +53,3 @@ ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
-    
-<DockPanel x:Class="WPFSharp.Globalizer.Controls.LanguageSelectionDropDownMenu"
-           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-           xmlns:Globalizer="clr-namespace:WPFSharp.Globalizer"
-           xmlns:Converters="clr-namespace:WPFSharp.Globalizer.Converters"
-           FlowDirection="{DynamicResource ResourceKey=FlowDirection_Default}"
-           >
-    <DockPanel.Resources>
-        <Converters:LanguageNameConverter x:Key="LanguageConverter" />
-    </DockPanel.Resources>
-    <Label x:Name="Label" Content="{Globalizer:GlobalizedResource ResourceKey=LanguageSelectionLabel, FallbackValue='Language: '}" />
-    <ComboBox x:Name="LanguageSelectionComboBox" SelectionChanged="LanguageSelectionChanged" ItemsSource="{x:Static Globalizer:AvailableLanguages.Instance}" >
-        <ComboBox.ItemTemplate>
-            <DataTemplate>
-                <TextBlock Text="{Binding Converter={StaticResource LanguageConverter}}" />
-            </DataTemplate>
-        </ComboBox.ItemTemplate>
-    </ComboBox>
-</DockPanel>
