--- a/WPFSharp.Globalizer/WPFSharp.Globalizer/Controls/LanguageSelectionMenuItem.xaml
+++ b/WPFSharp.Globalizer/WPFSharp.Globalizer/Controls/LanguageSelectionMenuItem.xaml
@@ -1,4 +1,31 @@
-﻿<!-- 
+﻿<!-- See license at bottom of file -->   
+<MenuItem x:Class="WPFSharp.Globalizer.Controls.LanguageSelectionMenuItem"
+          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+          xmlns:Globalizer="clr-namespace:WPFSharp.Globalizer"
+          xmlns:Converters="clr-namespace:WPFSharp.Globalizer.Converters" 
+          Name="MenuItemLanguages" 
+          Header="{Globalizer:GlobalizedResource Menu_Language, FallbackValue=Language}" 
+          ItemsSource="{x:Static Globalizer:AvailableLanguages.Instance}" >
+    <MenuItem.Resources>
+        <Converters:LanguageNameConverter x:Key="LanguageConverter" />
+        <Converters:LanguageToBoolConverter x:Key="LanguageToBoolConverter" />
+        <RadioButton x:Key="RadioButtonResource" x:Shared="false" HorizontalAlignment="Center" GroupName="Language" IsHitTestVisible="False"
+                     IsChecked="{Binding Converter={StaticResource LanguageToBoolConverter}, Mode=OneWay}" >
+        </RadioButton>
+    </MenuItem.Resources>
+    <MenuItem.ItemContainerStyle>
+        <Style TargetType="MenuItem">
+            <Setter Property="Icon" Value="{StaticResource RadioButtonResource}"/>
+            <Setter Property="Header" Value="{Binding Converter={StaticResource LanguageConverter}}"/>
+            <Setter Property="Command" Value="{Binding Path=SelectLanguageCommand, ElementName=MenuItemLanguages}"/>
+            <Setter Property="CommandParameter" Value="{Binding}"/>
+            <EventSetter Event="Click" Handler="MenuItemWithRadioButtons_Click" />
+        </Style>
+    </MenuItem.ItemContainerStyle>
+</MenuItem>
+
+<!-- 
 WPF Sharp Globalizer - A project deisgned to make localization and styling
                        easier by decoupling both process from the build.
 
@@ -32,29 +59,3 @@ ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
-    
-<MenuItem x:Class="WPFSharp.Globalizer.Controls.LanguageSelectionMenuItem"
-          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-          xmlns:Globalizer="clr-namespace:WPFSharp.Globalizer"
-          xmlns:Converters="clr-namespace:WPFSharp.Globalizer.Converters" 
-          Name="MenuItemLanguages" 
-          Header="{Globalizer:GlobalizedResource Menu_Language, FallbackValue=Language}" 
-          ItemsSource="{x:Static Globalizer:AvailableLanguages.Instance}" >
-    <MenuItem.Resources>
-        <Converters:LanguageNameConverter x:Key="LanguageConverter" />
-        <Converters:LanguageToBoolConverter x:Key="LanguageToBoolConverter" />
-        <RadioButton x:Key="RadioButtonResource" x:Shared="false" HorizontalAlignment="Center" GroupName="Language" IsHitTestVisible="False"
-                     IsChecked="{Binding Converter={StaticResource LanguageToBoolConverter}, Mode=OneWay}" >
-        </RadioButton>
-    </MenuItem.Resources>
-    <MenuItem.ItemContainerStyle>
-        <Style TargetType="MenuItem">
-            <Setter Property="Icon" Value="{StaticResource RadioButtonResource}"/>
-            <Setter Property="Header" Value="{Binding Converter={StaticResource LanguageConverter}}"/>
-            <Setter Property="Command" Value="{Binding Path=SelectLanguageCommand, ElementName=MenuItemLanguages}"/>
-            <Setter Property="CommandParameter" Value="{Binding}"/>
-            <EventSetter Event="Click" Handler="MenuItemWithRadioButtons_Click" />
-        </Style>
-    </MenuItem.ItemContainerStyle>
-</MenuItem>
