--- a/WPFSharp.Globalizer.Examples/WPF.Globalizer.Example/Globalization/es-ES/es-ES.xaml
+++ b/WPFSharp.Globalizer.Examples/WPF.Globalizer.Example/Globalization/es-ES/es-ES.xaml
@@ -18,6 +18,8 @@
     <sys:String x:Key="Menu_Language_Spanish">_Español</sys:String>
     <sys:String x:Key="Menu_Language_Hebrew">_Hebreo</sys:String>
 
+    <sys:String x:Key="LanguageSelectionLabel">_Idioma</sys:String>
+
     <!-- Form strings -->
     <sys:String x:Key="Form_FirstName">Nombre de pila</sys:String>
     <sys:String x:Key="Form_LastName">Appellido</sys:String>
