--- a/WPFSharp.Globalizer.Install/WPFSharp.Globalizer.Install/Product.wxs
+++ b/WPFSharp.Globalizer.Install/WPFSharp.Globalizer.Install/Product.wxs
@@ -19,7 +19,7 @@
           <Directory Id="ProductDirectory" Name="Globalizer">
             <Component Id="Dir_GlobalizerComponent" Guid="315F061A-7431-4381-A8C4-239926680486" DiskId="1" Win64="yes">
               <!-- Runtime, assembly in GAC -->
-              <File Id="Dir_GlobalizerDll" Name="WPFSharp.Globalizer.dll" Source="..\bin\$(var.WPFSharp.Globalizer.Configuration)\WPFSharp.Globalizer.dll" KeyPath="yes"/>
+              <File Id="Dir_GlobalizerDll" Name="WPFSharp.Globalizer.dll" Source="..\..\bin\$(var.WPFSharp.Globalizer.Configuration)\$(var.WPFSharp.Globalizer.Platform)\WPFSharp.Globalizer.dll" KeyPath="yes"/>
               <RegistryValue Id="Reg_GlobalizerDll" Root="HKLM" Key="SOFTWARE\Wow6432Node\Microsoft\.NETFramework\v4.0.21006\AssemblyFoldersEx\WPFSharp.Globalizer" Value="[$Dir_GlobalizerComponent]" Type="string"/>
             </Component>
           </Directory>
