Fixed design time in MVVM test

--- a/Examples/WPFSharp.Globalizer.MVVMExample/View/PersonView.xaml
+++ b/Examples/WPFSharp.Globalizer.MVVMExample/View/PersonView.xaml
@@ -42,9 +42,9 @@
         <Label Content="{globalizer:LocalizationBinding FirstNameLabel, FallbackValue='First Name'}" Name="labelFirstName" Grid.Row="3" FlowDirection="{DynamicResource FlowDirection_Reverse}" Grid.Column="1" />
         <Label Content="{globalizer:LocalizationBinding LastNameLabel, FallbackValue='Last Name'}" Name="labelLastName" Grid.Row="4" FlowDirection="{DynamicResource FlowDirection_Reverse}" Grid.Column="1" />
         <Label Content="{globalizer:LocalizationBinding AgeLabel, FallbackValue=Age, Converter={globconvert:LocalizationConverter}}" Name="labelAge" Grid.Row="5" FlowDirection="{DynamicResource FlowDirection_Reverse}" Grid.Column="1" />
-        <TextBox Name="FirstNameTextBox" Grid.Column="2" Grid.Row="3" />
-        <TextBox Name="LastNameTextBox" Grid.Column="2" Grid.Row="4" />
-        <TextBox Name="AgeTextBox" Grid.Column="2" Grid.Row="5" />
+        <TextBox Name="FirstNameTextBox" Grid.Column="2" Grid.Row="3" Text="{Binding FirstNameValue}" />
+        <TextBox Name="LastNameTextBox" Grid.Column="2" Grid.Row="4" Text="{Binding LastNameValue}"/>
+        <TextBox Name="AgeTextBox" Grid.Column="2" Grid.Row="5" Text="{Binding AgeValue}"/>
         <Button Content="{globalizer:GlobalizedResource Form_Button_Clear, FallbackValue=Clear}" Grid.Column="2" Grid.Row="6" HorizontalAlignment="Right" Name="ButtonClear" Width="75" MinHeight="20" Click="button1_Click" />
     </Grid>
 </UserControl>
