Modified ResourceDictionaryManagerBase.cs to allow the use of regular MergedDictionaries in application.

--- a/Examples/WPFSharp.Globalizer.MVVMExample/App.xaml
+++ b/Examples/WPFSharp.Globalizer.MVVMExample/App.xaml
@@ -4,6 +4,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Global="clr-namespace:WPFSharp.Globalizer;assembly=WPFSharp.Globalizer">
     <Application.Resources>
-
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary x:Name="TestIcons" Source="Graphics/Icons.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Global:GlobalizedApplication >
